tests/neg/interop_typetags_without_classtags_arenot_manifests/api_1.scala
package scala.reflect.api

trait TypeTags { self: Universe =>
  trait TypeTag[T]
}

abstract class Universe extends TypeTags
